--- a/clean_paper/predictions/db_search_morgan_tanimoto/RCX_NO/1731680876_all_full_1cand/log_file.yaml
+++ b/clean_paper/predictions/db_search_morgan_tanimoto/RCX_NO/1731680876_all_full_1cand/log_file.yaml
@@ -81,3 +81,127 @@ evaluation_0:
         threshold: '0.85'
     topk_probsort: '[0.6785856626357839]'
     topk_similsort: '[0.6785856626357839]'
+evaluation_1:
+    average_num_of_predictions: '1.0'
+    eval_config:
+        do_db_search: false
+        filtering_args:
+            max_mol_repr_len: 100
+            max_mz: 500
+            max_num_peaks: 300
+            mol_repr: smiles
+        fingerprint_type: morgan
+        fp_simil_function: tanimoto
+        on_the_fly: true
+        save_best_predictions: true
+        threshold: 0.85
+    eval_time: 00:00:02
+    formula_stats:
+        num_all_correct_formulas: 4 / 111
+        num_at_least_one_correct_formula: '4'
+        num_correct_formulas_at_best_prob: '4'
+        num_correct_formulas_at_best_simil: '4'
+        rate_of_all_correct_formulas: '0.036036036036036036'
+        rate_of_at_least_one_correct_formula: '0.036036036036036036'
+        rate_of_correct_formulas_at_best_prob: '0.036036036036036036'
+        rate_of_correct_formulas_at_best_simil: '0.036036036036036036'
+    hit_at_k_prob: '[(1, 0.036036036036036036)]'
+    labels_path: data/rcx_inhouse/rcx_inhouse_no_overlaps.jsonl
+    molecular_weight_stats:
+        mean_absolute_mw_difference_best_prob: '63.25084620358556'
+        mean_absolute_mw_difference_best_simil: '63.25084620358556'
+        mean_relative_mw_difference_best_prob: 17.64%
+        mean_relative_mw_difference_best_simil: 17.64%
+        rate_of_exact_mw_prob: '0.02702702702702703'
+        rate_of_exact_mw_simil: '0.02702702702702703'
+        rate_of_exact_nominal_mw_prob: '0.036036036036036036'
+        rate_of_exact_nominal_mw_simil: '0.036036036036036036'
+        rate_of_mw_difference_less_than_1_best_prob: '0.09009009009009009'
+        rate_of_mw_difference_less_than_1_best_simil: '0.09009009009009009'
+    num_datapoints_tested: '111'
+    num_empty_preds: '0'
+    num_predictions_at_k_counter: '[111]'
+    precise_preds_stats:
+        num_precise_preds_probsort: '0'
+        num_precise_preds_similsort: '0'
+        rate_of_precise_preds_probsort: '0.0'
+        rate_of_precise_preds_similsort: '0.0'
+    simil_1_hits:
+        counter_multiple_hits: dict_items([(1, 4)])
+        num_1_hits_as_first_probsort: '4'
+        num_1_hits_as_first_similsort: '4'
+        num_fp_simil_fail_prob: '4'
+        num_fp_simil_fail_simil: '4'
+        rate_of_1_hits_as_first_probsort: '0.036036036036036036'
+        rate_of_1_hits_as_first_similsort: '0.036036036036036036'
+    start_time_utc: 20/11/2024 21:36:54
+    threshold_stats:
+        num_better_than_threshold_probsort: '11'
+        num_better_than_threshold_similsort: '11'
+        rate_of_better_than_threshold_probsort: '0.0990990990990991'
+        rate_of_better_than_threshold_similsort: '0.0990990990990991'
+        threshold: '0.85'
+    topk_probsort: '[0.6785856626357839]'
+    topk_similsort: '[0.6785856626357839]'
+evaluation_2:
+    average_num_of_predictions: '1.0'
+    eval_config:
+        do_db_search: false
+        filtering_args:
+            max_mol_repr_len: 100
+            max_mz: 500
+            max_num_peaks: 300
+            mol_repr: smiles
+        fingerprint_type: morgan
+        fp_simil_function: tanimoto
+        on_the_fly: true
+        save_best_predictions: true
+        threshold: 0.85
+    eval_time: 00:00:02
+    formula_stats:
+        num_all_correct_formulas: 4 / 111
+        num_at_least_one_correct_formula: '4'
+        num_correct_formulas_at_best_prob: '4'
+        num_correct_formulas_at_best_simil: '4'
+        rate_of_all_correct_formulas: '0.036036036036036036'
+        rate_of_at_least_one_correct_formula: '0.036036036036036036'
+        rate_of_correct_formulas_at_best_prob: '0.036036036036036036'
+        rate_of_correct_formulas_at_best_simil: '0.036036036036036036'
+    hit_at_k_prob: '[(1, 0.036036036036036036)]'
+    labels_path: data/rcx_inhouse/rcx_inhouse_no_overlaps.jsonl
+    molecular_weight_stats:
+        mean_absolute_mw_difference_best_prob: '63.25084620358556'
+        mean_absolute_mw_difference_best_simil: '63.25084620358556'
+        mean_relative_mw_difference_best_prob: 17.64%
+        mean_relative_mw_difference_best_simil: 17.64%
+        rate_of_exact_mw_prob: '0.02702702702702703'
+        rate_of_exact_mw_simil: '0.02702702702702703'
+        rate_of_exact_nominal_mw_prob: '0.036036036036036036'
+        rate_of_exact_nominal_mw_simil: '0.036036036036036036'
+        rate_of_mw_difference_less_than_1_best_prob: '0.09009009009009009'
+        rate_of_mw_difference_less_than_1_best_simil: '0.09009009009009009'
+    num_datapoints_tested: '111'
+    num_empty_preds: '0'
+    num_predictions_at_k_counter: '[111]'
+    precise_preds_stats:
+        num_precise_preds_probsort: '0'
+        num_precise_preds_similsort: '0'
+        rate_of_precise_preds_probsort: '0.0'
+        rate_of_precise_preds_similsort: '0.0'
+    simil_1_hits:
+        counter_multiple_hits: dict_items([(1, 4)])
+        num_1_hits_as_first_probsort: '4'
+        num_1_hits_as_first_similsort: '4'
+        num_fp_simil_fail_prob: '4'
+        num_fp_simil_fail_simil: '4'
+        rate_of_1_hits_as_first_probsort: '0.036036036036036036'
+        rate_of_1_hits_as_first_similsort: '0.036036036036036036'
+    start_time_utc: 20/11/2024 21:44:21
+    threshold_stats:
+        num_better_than_threshold_probsort: '11'
+        num_better_than_threshold_similsort: '11'
+        rate_of_better_than_threshold_probsort: '0.0990990990990991'
+        rate_of_better_than_threshold_similsort: '0.0990990990990991'
+        threshold: '0.85'
+    topk_probsort: '[0.6785856626357839]'
+    topk_similsort: '[0.6785856626357839]'
