--- a/clean_paper/predictions/db_search_sss/RCX_NO/1731680931_all_full_10cand/log_file.yaml
+++ b/clean_paper/predictions/db_search_sss/RCX_NO/1731680931_all_full_10cand/log_file.yaml
@@ -85,3 +85,135 @@ evaluation_0:
     topk_similsort: '[0.40084473130100007, 0.29129111704870714, 0.24242970653650076,
         0.20296387052910328, 0.17837368975166118, 0.1553733478897802, 0.1359697627690096,
         0.11630664616145989, 0.09485624510292318, 0.07169046750626779]'
+evaluation_1:
+    average_num_of_predictions: '10.0'
+    eval_config:
+        do_db_search: false
+        filtering_args:
+            max_mol_repr_len: 100
+            max_mz: 500
+            max_num_peaks: 300
+            mol_repr: smiles
+        fingerprint_type: morgan
+        fp_simil_function: tanimoto
+        on_the_fly: true
+        save_best_predictions: true
+        threshold: 0.85
+    eval_time: 00:00:02
+    formula_stats:
+        num_all_correct_formulas: 24 / 1110
+        num_at_least_one_correct_formula: '20'
+        num_correct_formulas_at_best_prob: '7'
+        num_correct_formulas_at_best_simil: '7'
+        rate_of_all_correct_formulas: '0.021621621621621623'
+        rate_of_at_least_one_correct_formula: '0.18018018018018017'
+        rate_of_correct_formulas_at_best_prob: '0.06306306306306306'
+        rate_of_correct_formulas_at_best_simil: '0.06306306306306306'
+    hit_at_k_prob: '[(1, 0.009009009009009009), (9, 0.018018018018018018)]'
+    labels_path: data/rcx_inhouse/rcx_inhouse_no_overlaps.jsonl
+    molecular_weight_stats:
+        mean_absolute_mw_difference_best_prob: '71.05752718953154'
+        mean_absolute_mw_difference_best_simil: '57.997750348594586'
+        mean_relative_mw_difference_best_prob: 18.90%
+        mean_relative_mw_difference_best_simil: 15.30%
+        rate_of_exact_mw_prob: '0.05405405405405406'
+        rate_of_exact_mw_simil: '0.09009009009009009'
+        rate_of_exact_nominal_mw_prob: '0.14414414414414414'
+        rate_of_exact_nominal_mw_simil: '0.16216216216216217'
+        rate_of_mw_difference_less_than_1_best_prob: '0.16216216216216217'
+        rate_of_mw_difference_less_than_1_best_simil: '0.18018018018018017'
+    num_datapoints_tested: '111'
+    num_empty_preds: '0'
+    num_predictions_at_k_counter: '[111, 111, 111, 111, 111, 111, 111, 111, 111, 111]'
+    precise_preds_stats:
+        num_precise_preds_probsort: '0'
+        num_precise_preds_similsort: '0'
+        rate_of_precise_preds_probsort: '0.0'
+        rate_of_precise_preds_similsort: '0.0'
+    simil_1_hits:
+        counter_multiple_hits: dict_items([(1, 1), (3, 1)])
+        num_1_hits_as_first_probsort: '1'
+        num_1_hits_as_first_similsort: '2'
+        num_fp_simil_fail_prob: '1'
+        num_fp_simil_fail_simil: '2'
+        rate_of_1_hits_as_first_probsort: '0.009009009009009009'
+        rate_of_1_hits_as_first_similsort: '0.018018018018018018'
+    start_time_utc: 20/11/2024 21:36:54
+    threshold_stats:
+        num_better_than_threshold_probsort: '1'
+        num_better_than_threshold_similsort: '3'
+        rate_of_better_than_threshold_probsort: '0.009009009009009009'
+        rate_of_better_than_threshold_similsort: '0.02702702702702703'
+        threshold: '0.85'
+    topk_probsort: '[0.2682868297966089, 0.21909734229584865, 0.19251791112467193,
+        0.18859704512954173, 0.19557177001194187, 0.17502823024274855, 0.179621123158871,
+        0.16491548092530037, 0.16192594559242632, 0.14453790631845373]'
+    topk_similsort: '[0.40084473130100007, 0.29129111704870714, 0.24242970653650076,
+        0.20296387052910328, 0.17837368975166118, 0.1553733478897802, 0.1359697627690096,
+        0.11630664616145989, 0.09485624510292318, 0.07169046750626779]'
+evaluation_2:
+    average_num_of_predictions: '10.0'
+    eval_config:
+        do_db_search: false
+        filtering_args:
+            max_mol_repr_len: 100
+            max_mz: 500
+            max_num_peaks: 300
+            mol_repr: smiles
+        fingerprint_type: morgan
+        fp_simil_function: tanimoto
+        on_the_fly: true
+        save_best_predictions: true
+        threshold: 0.85
+    eval_time: 00:00:02
+    formula_stats:
+        num_all_correct_formulas: 24 / 1110
+        num_at_least_one_correct_formula: '20'
+        num_correct_formulas_at_best_prob: '7'
+        num_correct_formulas_at_best_simil: '7'
+        rate_of_all_correct_formulas: '0.021621621621621623'
+        rate_of_at_least_one_correct_formula: '0.18018018018018017'
+        rate_of_correct_formulas_at_best_prob: '0.06306306306306306'
+        rate_of_correct_formulas_at_best_simil: '0.06306306306306306'
+    hit_at_k_prob: '[(1, 0.009009009009009009), (9, 0.018018018018018018)]'
+    labels_path: data/rcx_inhouse/rcx_inhouse_no_overlaps.jsonl
+    molecular_weight_stats:
+        mean_absolute_mw_difference_best_prob: '71.05752718953154'
+        mean_absolute_mw_difference_best_simil: '57.997750348594586'
+        mean_relative_mw_difference_best_prob: 18.90%
+        mean_relative_mw_difference_best_simil: 15.30%
+        rate_of_exact_mw_prob: '0.05405405405405406'
+        rate_of_exact_mw_simil: '0.09009009009009009'
+        rate_of_exact_nominal_mw_prob: '0.14414414414414414'
+        rate_of_exact_nominal_mw_simil: '0.16216216216216217'
+        rate_of_mw_difference_less_than_1_best_prob: '0.16216216216216217'
+        rate_of_mw_difference_less_than_1_best_simil: '0.18018018018018017'
+    num_datapoints_tested: '111'
+    num_empty_preds: '0'
+    num_predictions_at_k_counter: '[111, 111, 111, 111, 111, 111, 111, 111, 111, 111]'
+    precise_preds_stats:
+        num_precise_preds_probsort: '0'
+        num_precise_preds_similsort: '0'
+        rate_of_precise_preds_probsort: '0.0'
+        rate_of_precise_preds_similsort: '0.0'
+    simil_1_hits:
+        counter_multiple_hits: dict_items([(1, 1), (3, 1)])
+        num_1_hits_as_first_probsort: '1'
+        num_1_hits_as_first_similsort: '2'
+        num_fp_simil_fail_prob: '1'
+        num_fp_simil_fail_simil: '2'
+        rate_of_1_hits_as_first_probsort: '0.009009009009009009'
+        rate_of_1_hits_as_first_similsort: '0.018018018018018018'
+    start_time_utc: 20/11/2024 21:44:21
+    threshold_stats:
+        num_better_than_threshold_probsort: '1'
+        num_better_than_threshold_similsort: '3'
+        rate_of_better_than_threshold_probsort: '0.009009009009009009'
+        rate_of_better_than_threshold_similsort: '0.02702702702702703'
+        threshold: '0.85'
+    topk_probsort: '[0.2682868297966089, 0.21909734229584865, 0.19251791112467193,
+        0.18859704512954173, 0.19557177001194187, 0.17502823024274855, 0.179621123158871,
+        0.16491548092530037, 0.16192594559242632, 0.14453790631845373]'
+    topk_similsort: '[0.40084473130100007, 0.29129111704870714, 0.24242970653650076,
+        0.20296387052910328, 0.17837368975166118, 0.1553733478897802, 0.1359697627690096,
+        0.11630664616145989, 0.09485624510292318, 0.07169046750626779]'
