--- a/clean_paper/predictions/db_search_sss/RCX_OO/1731680790_all_full_10cand/log_file.yaml
+++ b/clean_paper/predictions/db_search_sss/RCX_OO/1731680790_all_full_10cand/log_file.yaml
@@ -87,3 +87,139 @@ evaluation_0:
     topk_similsort: '[0.6841264088052739, 0.3756222925814228, 0.27759182708376207,
         0.22500095376111273, 0.20054686609955172, 0.16840280230143168, 0.13818825028616746,
         0.11850231192557928, 0.09345465933976425, 0.0738481212125802]'
+evaluation_1:
+    average_num_of_predictions: '10.0'
+    eval_config:
+        do_db_search: false
+        filtering_args:
+            max_mol_repr_len: 100
+            max_mz: 500
+            max_num_peaks: 300
+            mol_repr: smiles
+        fingerprint_type: morgan
+        fp_simil_function: tanimoto
+        on_the_fly: true
+        save_best_predictions: true
+        threshold: 0.85
+    eval_time: 00:00:02
+    formula_stats:
+        num_all_correct_formulas: 75 / 1080
+        num_at_least_one_correct_formula: '63'
+        num_correct_formulas_at_best_prob: '45'
+        num_correct_formulas_at_best_simil: '61'
+        rate_of_all_correct_formulas: '0.06944444444444445'
+        rate_of_at_least_one_correct_formula: '0.5833333333333334'
+        rate_of_correct_formulas_at_best_prob: '0.4166666666666667'
+        rate_of_correct_formulas_at_best_simil: '0.5648148148148148'
+    hit_at_k_prob: '[(1, 0.3425925925925926), (2, 0.4074074074074074), (3, 0.4351851851851852),
+        (4, 0.4537037037037037), (5, 0.49074074074074076), (6, 0.5092592592592593),
+        (8, 0.5185185185185185)]'
+    labels_path: data/rcx_inhouse/rcx_inhouse_overlaps_only.jsonl
+    molecular_weight_stats:
+        mean_absolute_mw_difference_best_prob: '65.61028867457908'
+        mean_absolute_mw_difference_best_simil: '41.17867786146295'
+        mean_relative_mw_difference_best_prob: 18.70%
+        mean_relative_mw_difference_best_simil: 13.21%
+        rate_of_exact_mw_prob: '0.39814814814814814'
+        rate_of_exact_mw_simil: '0.5370370370370371'
+        rate_of_exact_nominal_mw_prob: '0.4351851851851852'
+        rate_of_exact_nominal_mw_simil: '0.5648148148148148'
+        rate_of_mw_difference_less_than_1_best_prob: '0.4351851851851852'
+        rate_of_mw_difference_less_than_1_best_simil: '0.5648148148148148'
+    num_datapoints_tested: '108'
+    num_empty_preds: '0'
+    num_predictions_at_k_counter: '[108, 108, 108, 108, 108, 108, 108, 108, 108, 108]'
+    precise_preds_stats:
+        num_precise_preds_probsort: '37'
+        num_precise_preds_similsort: '56'
+        rate_of_precise_preds_probsort: '0.3425925925925926'
+        rate_of_precise_preds_similsort: '0.5185185185185185'
+    simil_1_hits:
+        counter_multiple_hits: dict_items([(1, 56)])
+        num_1_hits_as_first_probsort: '37'
+        num_1_hits_as_first_similsort: '56'
+        num_fp_simil_fail_prob: '0'
+        num_fp_simil_fail_simil: '0'
+        rate_of_1_hits_as_first_probsort: '0.3425925925925926'
+        rate_of_1_hits_as_first_similsort: '0.5185185185185185'
+    start_time_utc: 20/11/2024 21:36:37
+    threshold_stats:
+        num_better_than_threshold_probsort: '38'
+        num_better_than_threshold_similsort: '56'
+        rate_of_better_than_threshold_probsort: '0.35185185185185186'
+        rate_of_better_than_threshold_similsort: '0.5185185185185185'
+        threshold: '0.85'
+    topk_probsort: '[0.4941621118567694, 0.2922812362978382, 0.2650361801767544, 0.20359979991027327,
+        0.22588855861338558, 0.1844726155174003, 0.17101301633081778, 0.19953282061522254,
+        0.1586578306399534, 0.1606403234382312]'
+    topk_similsort: '[0.6841264088052739, 0.3756222925814228, 0.27759182708376207,
+        0.22500095376111273, 0.20054686609955172, 0.16840280230143168, 0.13818825028616746,
+        0.11850231192557928, 0.09345465933976425, 0.0738481212125802]'
+evaluation_2:
+    average_num_of_predictions: '10.0'
+    eval_config:
+        do_db_search: false
+        filtering_args:
+            max_mol_repr_len: 100
+            max_mz: 500
+            max_num_peaks: 300
+            mol_repr: smiles
+        fingerprint_type: morgan
+        fp_simil_function: tanimoto
+        on_the_fly: true
+        save_best_predictions: true
+        threshold: 0.85
+    eval_time: 00:00:02
+    formula_stats:
+        num_all_correct_formulas: 75 / 1080
+        num_at_least_one_correct_formula: '63'
+        num_correct_formulas_at_best_prob: '45'
+        num_correct_formulas_at_best_simil: '61'
+        rate_of_all_correct_formulas: '0.06944444444444445'
+        rate_of_at_least_one_correct_formula: '0.5833333333333334'
+        rate_of_correct_formulas_at_best_prob: '0.4166666666666667'
+        rate_of_correct_formulas_at_best_simil: '0.5648148148148148'
+    hit_at_k_prob: '[(1, 0.3425925925925926), (2, 0.4074074074074074), (3, 0.4351851851851852),
+        (4, 0.4537037037037037), (5, 0.49074074074074076), (6, 0.5092592592592593),
+        (8, 0.5185185185185185)]'
+    labels_path: data/rcx_inhouse/rcx_inhouse_overlaps_only.jsonl
+    molecular_weight_stats:
+        mean_absolute_mw_difference_best_prob: '65.61028867457908'
+        mean_absolute_mw_difference_best_simil: '41.17867786146295'
+        mean_relative_mw_difference_best_prob: 18.70%
+        mean_relative_mw_difference_best_simil: 13.21%
+        rate_of_exact_mw_prob: '0.39814814814814814'
+        rate_of_exact_mw_simil: '0.5370370370370371'
+        rate_of_exact_nominal_mw_prob: '0.4351851851851852'
+        rate_of_exact_nominal_mw_simil: '0.5648148148148148'
+        rate_of_mw_difference_less_than_1_best_prob: '0.4351851851851852'
+        rate_of_mw_difference_less_than_1_best_simil: '0.5648148148148148'
+    num_datapoints_tested: '108'
+    num_empty_preds: '0'
+    num_predictions_at_k_counter: '[108, 108, 108, 108, 108, 108, 108, 108, 108, 108]'
+    precise_preds_stats:
+        num_precise_preds_probsort: '37'
+        num_precise_preds_similsort: '56'
+        rate_of_precise_preds_probsort: '0.3425925925925926'
+        rate_of_precise_preds_similsort: '0.5185185185185185'
+    simil_1_hits:
+        counter_multiple_hits: dict_items([(1, 56)])
+        num_1_hits_as_first_probsort: '37'
+        num_1_hits_as_first_similsort: '56'
+        num_fp_simil_fail_prob: '0'
+        num_fp_simil_fail_simil: '0'
+        rate_of_1_hits_as_first_probsort: '0.3425925925925926'
+        rate_of_1_hits_as_first_similsort: '0.5185185185185185'
+    start_time_utc: 20/11/2024 21:44:33
+    threshold_stats:
+        num_better_than_threshold_probsort: '38'
+        num_better_than_threshold_similsort: '56'
+        rate_of_better_than_threshold_probsort: '0.35185185185185186'
+        rate_of_better_than_threshold_similsort: '0.5185185185185185'
+        threshold: '0.85'
+    topk_probsort: '[0.4941621118567694, 0.2922812362978382, 0.2650361801767544, 0.20359979991027327,
+        0.22588855861338558, 0.1844726155174003, 0.17101301633081778, 0.19953282061522254,
+        0.1586578306399534, 0.1606403234382312]'
+    topk_similsort: '[0.6841264088052739, 0.3756222925814228, 0.27759182708376207,
+        0.22500095376111273, 0.20054686609955172, 0.16840280230143168, 0.13818825028616746,
+        0.11850231192557928, 0.09345465933976425, 0.0738481212125802]'
