--- a/clean_paper/predictions/db_search_sss/RCX_OO/1731680833_all_full_1cand/log_file.yaml
+++ b/clean_paper/predictions/db_search_sss/RCX_OO/1731680833_all_full_1cand/log_file.yaml
@@ -81,3 +81,127 @@ evaluation_0:
         threshold: '0.85'
     topk_probsort: '[0.4941621118567694]'
     topk_similsort: '[0.4941621118567694]'
+evaluation_1:
+    average_num_of_predictions: '1.0'
+    eval_config:
+        do_db_search: false
+        filtering_args:
+            max_mol_repr_len: 100
+            max_mz: 500
+            max_num_peaks: 300
+            mol_repr: smiles
+        fingerprint_type: morgan
+        fp_simil_function: tanimoto
+        on_the_fly: true
+        save_best_predictions: true
+        threshold: 0.85
+    eval_time: 00:00:02
+    formula_stats:
+        num_all_correct_formulas: 45 / 108
+        num_at_least_one_correct_formula: '45'
+        num_correct_formulas_at_best_prob: '45'
+        num_correct_formulas_at_best_simil: '45'
+        rate_of_all_correct_formulas: '0.4166666666666667'
+        rate_of_at_least_one_correct_formula: '0.4166666666666667'
+        rate_of_correct_formulas_at_best_prob: '0.4166666666666667'
+        rate_of_correct_formulas_at_best_simil: '0.4166666666666667'
+    hit_at_k_prob: '[(1, 0.3425925925925926)]'
+    labels_path: data/rcx_inhouse/rcx_inhouse_overlaps_only.jsonl
+    molecular_weight_stats:
+        mean_absolute_mw_difference_best_prob: '65.61028867457908'
+        mean_absolute_mw_difference_best_simil: '65.61028867457908'
+        mean_relative_mw_difference_best_prob: 18.70%
+        mean_relative_mw_difference_best_simil: 18.70%
+        rate_of_exact_mw_prob: '0.39814814814814814'
+        rate_of_exact_mw_simil: '0.39814814814814814'
+        rate_of_exact_nominal_mw_prob: '0.4351851851851852'
+        rate_of_exact_nominal_mw_simil: '0.4351851851851852'
+        rate_of_mw_difference_less_than_1_best_prob: '0.4351851851851852'
+        rate_of_mw_difference_less_than_1_best_simil: '0.4351851851851852'
+    num_datapoints_tested: '108'
+    num_empty_preds: '0'
+    num_predictions_at_k_counter: '[108]'
+    precise_preds_stats:
+        num_precise_preds_probsort: '37'
+        num_precise_preds_similsort: '37'
+        rate_of_precise_preds_probsort: '0.3425925925925926'
+        rate_of_precise_preds_similsort: '0.3425925925925926'
+    simil_1_hits:
+        counter_multiple_hits: dict_items([(1, 37)])
+        num_1_hits_as_first_probsort: '37'
+        num_1_hits_as_first_similsort: '37'
+        num_fp_simil_fail_prob: '0'
+        num_fp_simil_fail_simil: '0'
+        rate_of_1_hits_as_first_probsort: '0.3425925925925926'
+        rate_of_1_hits_as_first_similsort: '0.3425925925925926'
+    start_time_utc: 20/11/2024 21:36:37
+    threshold_stats:
+        num_better_than_threshold_probsort: '38'
+        num_better_than_threshold_similsort: '38'
+        rate_of_better_than_threshold_probsort: '0.35185185185185186'
+        rate_of_better_than_threshold_similsort: '0.35185185185185186'
+        threshold: '0.85'
+    topk_probsort: '[0.4941621118567694]'
+    topk_similsort: '[0.4941621118567694]'
+evaluation_2:
+    average_num_of_predictions: '1.0'
+    eval_config:
+        do_db_search: false
+        filtering_args:
+            max_mol_repr_len: 100
+            max_mz: 500
+            max_num_peaks: 300
+            mol_repr: smiles
+        fingerprint_type: morgan
+        fp_simil_function: tanimoto
+        on_the_fly: true
+        save_best_predictions: true
+        threshold: 0.85
+    eval_time: 00:00:02
+    formula_stats:
+        num_all_correct_formulas: 45 / 108
+        num_at_least_one_correct_formula: '45'
+        num_correct_formulas_at_best_prob: '45'
+        num_correct_formulas_at_best_simil: '45'
+        rate_of_all_correct_formulas: '0.4166666666666667'
+        rate_of_at_least_one_correct_formula: '0.4166666666666667'
+        rate_of_correct_formulas_at_best_prob: '0.4166666666666667'
+        rate_of_correct_formulas_at_best_simil: '0.4166666666666667'
+    hit_at_k_prob: '[(1, 0.3425925925925926)]'
+    labels_path: data/rcx_inhouse/rcx_inhouse_overlaps_only.jsonl
+    molecular_weight_stats:
+        mean_absolute_mw_difference_best_prob: '65.61028867457908'
+        mean_absolute_mw_difference_best_simil: '65.61028867457908'
+        mean_relative_mw_difference_best_prob: 18.70%
+        mean_relative_mw_difference_best_simil: 18.70%
+        rate_of_exact_mw_prob: '0.39814814814814814'
+        rate_of_exact_mw_simil: '0.39814814814814814'
+        rate_of_exact_nominal_mw_prob: '0.4351851851851852'
+        rate_of_exact_nominal_mw_simil: '0.4351851851851852'
+        rate_of_mw_difference_less_than_1_best_prob: '0.4351851851851852'
+        rate_of_mw_difference_less_than_1_best_simil: '0.4351851851851852'
+    num_datapoints_tested: '108'
+    num_empty_preds: '0'
+    num_predictions_at_k_counter: '[108]'
+    precise_preds_stats:
+        num_precise_preds_probsort: '37'
+        num_precise_preds_similsort: '37'
+        rate_of_precise_preds_probsort: '0.3425925925925926'
+        rate_of_precise_preds_similsort: '0.3425925925925926'
+    simil_1_hits:
+        counter_multiple_hits: dict_items([(1, 37)])
+        num_1_hits_as_first_probsort: '37'
+        num_1_hits_as_first_similsort: '37'
+        num_fp_simil_fail_prob: '0'
+        num_fp_simil_fail_simil: '0'
+        rate_of_1_hits_as_first_probsort: '0.3425925925925926'
+        rate_of_1_hits_as_first_similsort: '0.3425925925925926'
+    start_time_utc: 20/11/2024 21:44:33
+    threshold_stats:
+        num_better_than_threshold_probsort: '38'
+        num_better_than_threshold_similsort: '38'
+        rate_of_better_than_threshold_probsort: '0.35185185185185186'
+        rate_of_better_than_threshold_similsort: '0.35185185185185186'
+        threshold: '0.85'
+    topk_probsort: '[0.4941621118567694]'
+    topk_similsort: '[0.4941621118567694]'
