--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "RLHF/trlx_GC_MS_BART"]
 	path = RLHF/trlx_GC_MS_BART
 	url = https://github.com/hejjack/trlx_GC_MS_BART
+
+[submodule "Hugging_face_hub/synth2_2x4.7M"]
+	path = Hugging_face_hub/synth2_2x4.7M
+	url = https://huggingface.co/datasets/MS-ML/synth2_2x4.7M
