--- a/clean_paper/configs/predict_nist_test_cpu.yaml
+++ b/clean_paper/configs/predict_nist_test_cpu.yaml
@@ -1,6 +1,6 @@
 general:
   device: cpu # cpu/cuda
-  additional_naming_info: "beam50" # optional
+  additional_naming_info: "greedy" # optional
 
 dataset:
   data_path: "data/nist/test.jsonl" # REQUIRED!
@@ -17,10 +17,10 @@ generation_args:
   "top_k": null
   "top_p": null
   "do_sample": False
-  "num_beams": 50
+  "num_beams": 1
   "temperature": null
   "penalty_alpha": null
-  "num_return_sequences": 50
+  "num_return_sequences": 1
   "max_length": 200
   "decoder_input_token": "<nist>"
   "length_penalty": 1.0 # (use for beam search otherwise set to 0)
