--- a/configs/pretrain_exp8_448.yaml
+++ b/configs/pretrain_exp8_448.yaml
@@ -84,7 +84,7 @@ hf_training_args:
 
   learning_rate: 0.00005
   auto_bs: True
-  bart_size: "base"           # "large" or "base"
+  spectus_size: "base"           # "large" or "base"
   effective_train_batch_size: 128
   effective_eval_batch_size: 128
 
